# qttranslations

./: .gitignore  .prev_CMakeLists.txt  CMakeLists.txt  conanfile.py  dependencies.yaml  qtbase_pt_BR.ts  sync.profile
coin/: module_config.yaml
translations/: CMakeLists.txt  README  assistant_cs.ts  assistant_da.ts  assistant_de.ts  assistant_hr.ts  assistant_hu.ts  assistant_ka.ts  assistant_ko.ts  assistant_pl.ts  assistant_ru.ts  assistant_tr.ts  assistant_uk.ts  assistant_zh_CN.ts  assistant_zh_TW.ts  check-ts.pl  check-ts.xq  designer_bg.ts  designer_cs.ts  designer_da.ts  designer_de.ts  designer_es.ts  designer_fr.ts  designer_hr.ts  designer_hu.ts  designer_ja.ts  designer_ka.ts  designer_ko.ts  designer_nl.ts  designer_pl.ts  designer_ru.ts  designer_sk.ts  designer_sl.ts  designer_tr.ts  designer_uk.ts  designer_zh_CN.ts  designer_zh_TW.ts  git-stage-script.cmake  linguist_cs.ts  linguist_da.ts  (+178 more)
